fix: JDK 8兼容性修复 + Freemarker模板冲突 + 打包流程修复
变更内容：
- LicenseGenerator: isBlank()→trim().isEmpty() 兼容JDK 8
- JwtTokenProvider: isBlank()→trim().isEmpty() 兼容JDK 8
- PackageController: 删除未使用import, null保护msg
- PackageService: updateTaskStatus增加截断保护和异常处理
- schema.sql: current_step列从VARCHAR(200)扩至VARCHAR(500)
- start.ps1.ftl: Freemarker ${step}与PowerShell变量冲突修复(使用r''转义)
- 代码评审报告更新

验证: mvn clean compile -Dmaven.compiler.release=8 BUILD SUCCESS, E2E 25/25通过