@@ -19,7 +19,7 @@ public class JwtTokenProvider {
 
     public JwtTokenProvider(@Value("${jwt.secret}") String secret,
                             @Value("${jwt.expiration-ms:86400000}") long expirationMs) {
-        if (secret == null || secret.isBlank() || secret.contains("change-in-production")) {
+        if (secret == null || secret.trim().isEmpty() || secret.contains("change-in-production")) {
             throw new IllegalArgumentException("JWT secret 未配置或仍为默认值，请设置环境变量 JWT_SECRET");
         }
         this.secretKey = Keys.hmacShaKeyFor(secret.getBytes(StandardCharsets.UTF_8));
